crates/pg_syntax/tests/snapshots/postgres_regress/json@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT test_json -> 'x'\nFROM test_json\nWHERE json_type = 'array';"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..23
    AExpr@7..23
      ColumnRef@7..16
        Ident@7..16 "test_json"
      Whitespace@16..17 " "
      Op@17..19 "->"
      Whitespace@19..20 " "
      AConst@20..23
        Sconst@20..23 "'x'"
  Newline@23..24 "\n"
  From@24..28 "FROM"
  Whitespace@28..29 " "
  RangeVar@29..38
    Ident@29..38 "test_json"
  Newline@38..39 "\n"
  Where@39..44 "WHERE"
  Whitespace@44..45 " "
  AExpr@45..64
    ColumnRef@45..54
      Ident@45..54 "json_type"
    Whitespace@54..55 " "
    Ascii61@55..56 "="
    Whitespace@56..57 " "
    AConst@57..64
      Sconst@57..64 "'array'"
  Ascii59@64..65 ";"

